fixed top sarch box alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,8 @@ body {
     background-repeat: no-repeat;
     background-size: 26px;
     background-position: 97%;
-    margin-bottom: 20px;;
+    margin-bottom: 20px;
+    margin-top: 40px;
 }
 
 .movie-caption {
